--- a/Week 1/Day 4/Landing Page/styles/scss/partials/_quote.scss
+++ b/Week 1/Day 4/Landing Page/styles/scss/partials/_quote.scss
@@ -21,23 +21,48 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: $gap-default;
 
         @include respond-to("medium") {
             padding-bottom: 56px;
+            gap: $gap-medium;
         }
         @include respond-to("large") {
             padding-top: $padding-xlarge;
             padding-bottom: 107px;
+            gap: $gap-large;
         }
     }
 
     @include e("header") {
+        @include text-defaults;
+        display: flex;
+        flex-direction: column;
+        gap: $gap-xsmall;
+
+        @include m("title") {
+            font-size: $font-size-normal;
+            font-weight: $font-weight-bold;
+            margin: 0 auto;
+            margin-top: 16px;
+
+            @include respond-to("medium") {
+                font-size: $font-size-large;
+            }
+            @include respond-to("large") {
+                font-size: $font-size-xlarge;
+            }
+        }
+        @include m("description") {
+            margin: 0 auto;
+        }
     }
 
     @include e("form") {
         display: flex;
         align-items: center;
         height: 40px;
+        margin: 0;
 
         @include respond-to("medium") {
             height: 75px;
